WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
220426
[Mojave Debug] ASSERTION FAILED: !m_requests.contains(clientIdentifier) in WebKit::SpeechRecognitionServer::start()
https://bugs.webkit.org/show_bug.cgi?id=220426
Summary
[Mojave Debug] ASSERTION FAILED: !m_requests.contains(clientIdentifier) in We...
Ryan Haddad
Reported
2021-01-07 11:21:52 PST
The following test is consistently failing an assertion on Mojave debug bots TestWebKitAPI.WebKit2.SpeechRecognitionPageBecomesInvisible _RegisterApplication(), FAILED TO establish the default connection to the WindowServer, _CGSDefaultConnection() is NULL. ASSERTION FAILED: !m_requests.contains(clientIdentifier) /Volumes/Data/slave/mojave-debug/build/Source/WebKit/UIProcess/SpeechRecognitionServer.cpp(58) : void WebKit::SpeechRecognitionServer::start(WebCore::SpeechRecognitionConnectionClientIdentifier, WTF::String &&, bool, bool, uint64_t, WebCore::ClientOrigin &&) 1 0x10b8e5409 WTFCrash 2 0x11644082b WTFCrashWithInfo(int, char const*, char const*, int) 3 0x11768693e WebKit::SpeechRecognitionServer::start(WTF::ObjectIdentifier<WebCore::SpeechRecognitionConnectionClientIdentifierType>, WTF::String&&, bool, bool, unsigned long long, WebCore::ClientOrigin&&) 4 0x116c1ba28 void IPC::callMemberFunctionImpl<WebKit::SpeechRecognitionServer, void (WebKit::SpeechRecognitionServer::*)(WTF::ObjectIdentifier<WebCore::SpeechRecognitionConnectionClientIdentifierType>, WTF::String&&, bool, bool, unsigned long long, WebCore::ClientOrigin&&), std::__1::tuple<WTF::ObjectIdentifier<WebCore::SpeechRecognitionConnectionClientIdentifierType>, WTF::String, bool, bool, unsigned long long, WebCore::ClientOrigin>, 0ul, 1ul, 2ul, 3ul, 4ul, 5ul>(WebKit::SpeechRecognitionServer*, void (WebKit::SpeechRecognitionServer::*)(WTF::ObjectIdentifier<WebCore::SpeechRecognitionConnectionClientIdentifierType>, WTF::String&&, bool, bool, unsigned long long, WebCore::ClientOrigin&&), std::__1::tuple<WTF::ObjectIdentifier<WebCore::SpeechRecognitionConnectionClientIdentifierType>, WTF::String, bool, bool, unsigned long long, WebCore::ClientOrigin>&&, std::__1::integer_sequence<unsigned long, 0ul, 1ul, 2ul, 3ul, 4ul, 5ul>) 5 0x116c17b50 void IPC::callMemberFunction<WebKit::SpeechRecognitionServer, void (WebKit::SpeechRecognitionServer::*)(WTF::ObjectIdentifier<WebCore::SpeechRecognitionConnectionClientIdentifierType>, WTF::String&&, bool, bool, unsigned long long, WebCore::ClientOrigin&&), std::__1::tuple<WTF::ObjectIdentifier<WebCore::SpeechRecognitionConnectionClientIdentifierType>, WTF::String, bool, bool, unsigned long long, WebCore::ClientOrigin>, std::__1::integer_sequence<unsigned long, 0ul, 1ul, 2ul, 3ul, 4ul, 5ul> >(std::__1::tuple<WTF::ObjectIdentifier<WebCore::SpeechRecognitionConnectionClientIdentifierType>, WTF::String, bool, bool, unsigned long long, WebCore::ClientOrigin>&&, WebKit::SpeechRecognitionServer*, void (WebKit::SpeechRecognitionServer::*)(WTF::ObjectIdentifier<WebCore::SpeechRecognitionConnectionClientIdentifierType>, WTF::String&&, bool, bool, unsigned long long, WebCore::ClientOrigin&&)) 6 0x116c1621e void IPC::handleMessage<Messages::SpeechRecognitionServer::Start, WebKit::SpeechRecognitionServer, void (WebKit::SpeechRecognitionServer::*)(WTF::ObjectIdentifier<WebCore::SpeechRecognitionConnectionClientIdentifierType>, WTF::String&&, bool, bool, unsigned long long, WebCore::ClientOrigin&&)>(IPC::Decoder&, WebKit::SpeechRecognitionServer*, void (WebKit::SpeechRecognitionServer::*)(WTF::ObjectIdentifier<WebCore::SpeechRecognitionConnectionClientIdentifierType>, WTF::String&&, bool, bool, unsigned long long, WebCore::ClientOrigin&&)) 7 0x116c16013 WebKit::SpeechRecognitionServer::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 8 0x1168be5df IPC::MessageReceiverMap::dispatchMessage(IPC::Connection&, IPC::Decoder&) 9 0x11758ca84 WebKit::AuxiliaryProcessProxy::dispatchMessage(IPC::Connection&, IPC::Decoder&) 10 0x11788122a WebKit::WebProcessProxy::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 11 0x1164b63e1 IPC::Connection::dispatchMessage(IPC::Decoder&) 12 0x1164b74ae IPC::Connection::dispatchMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >) 13 0x1164b5310 IPC::Connection::dispatchIncomingMessages() 14 0x1164d890f IPC::Connection::enqueueIncomingMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >)::$_8::operator()() 15 0x1164d8849 WTF::Detail::CallableWrapper<IPC::Connection::enqueueIncomingMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >)::$_8, void>::call() 16 0x10b91093a WTF::Function<void ()>::operator()() const 17 0x10b98f816 WTF::RunLoop::performWork() 18 0x10b993ebe WTF::RunLoop::performWork(void*) 19 0x7fff460d2683 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ 20 0x7fff460d2629 __CFRunLoopDoSource0 21 0x7fff460b5feb __CFRunLoopDoSources0 22 0x7fff460b55b5 __CFRunLoopRun 23 0x7fff460b4ebe CFRunLoopRunSpecific 24 0x7fff483197df -[NSRunLoop(NSRunLoop) runMode:beforeDate:] 25 0x109992086 TestWebKitAPI::Util::run(bool*) 26 0x10982c8b8 TestWebKitAPI::WebKit2_SpeechRecognitionPageBecomesInvisible_Test::TestBody() 27 0x109ba6dee void testing::internal::HandleSehExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) 28 0x109b7451b void testing::internal::HandleExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) 29 0x109b74446 testing::Test::Run() 30 0x109b75655 testing::TestInfo::Run() 31 0x109b7653f testing::TestCase::Run()
https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.WebKit2.SpeechRecognitionPageBecomesInvisible
Attachments
Patch
(1.41 KB, patch)
2021-01-07 15:50 PST
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-01-07 11:22:05 PST
<
rdar://problem/72897083
>
Sihui Liu
Comment 2
2021-01-07 15:50:50 PST
Created
attachment 417221
[details]
Patch
EWS
Comment 3
2021-01-08 08:58:13 PST
Committed
r271299
: <
https://trac.webkit.org/changeset/271299
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 417221
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug