[Mojave Debug] ASSERTION FAILED: !m_requests.contains(clientIdentifier) in WebKit::SpeechRecognitionServer::start() https://bugs.webkit.org/show_bug.cgi?id=220426 <rdar://problem/72897083>

Patch by Sihui Liu <sihui_liu@appe.com> on 2021-01-08
Reviewed by Youenn Fablet.

We should send end event to mark the end of recognition. Otherwise, SpeechRecognitionServer does not know the
request is finished and won't remove it from map.

* Modules/speech/SpeechRecognizer.cpp:
(WebCore::SpeechRecognizer::resetRecognition):

Canonical link: https://commits.webkit.org/232878@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@271299 268f45cc-cd09-0410-ab3c-d52691b4dbfc